add button of copy to clipboard

--- a/ViaJsonBuilder/wwwroot/index.html
+++ b/ViaJsonBuilder/wwwroot/index.html
@@ -10,6 +10,7 @@
     <link href="css/app.css" rel="stylesheet" />
     <link href="css/drag-drop-zone.css" rel="stylesheet" />
     <script src="js/inputfile.js"></script>
+    <script src="_content/CurrieTechnologies.Razor.Clipboard/clipboard.min.js"></script>
 
     <!-- Start Single Page Apps for GitHub Pages -->
     <script type="text/javascript">
