--- a/ViaJsonBuilder/wwwroot/index.html
+++ b/ViaJsonBuilder/wwwroot/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <title>ViaJsonBuilder</title>
+    <title>VIA JSON Building Tool</title>
     <base href="/ViaJsonBuilder/" />
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
